--- a/grid.html
+++ b/grid.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning grid</title>
+    <link rel="stylesheet" href="./grid.css">
 </head>
 <body>
-    <h1>Why use grid layouts?</h1>
-    <ul class="list">
-        <li>Easier to create two dimensions</li>
-        <li>Simple markup</li>
-        <li>Flexible</li>
-        <li>Skip frameworks</li>
-        <li>Browser support</li>
-        <li><a href="examples.html">See example</a></li>
-    </ul>
+    <div class="container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>6</div>
+    </div>
 </body>
 </html>
